Fix: header height shrink on smaller screens to instead stay consistent

--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -623,7 +623,6 @@ footer{
     position: fixed;
     z-index: 999;
     flex-direction: column;
-    height: auto;
   }
   
   header nav{
